
0.002001 2010-07-03
    - Fix for loadCommitInfo.
    - Fix tests to work with local-libbery.
    - Correct example link and FCGI script.
    - Bumping version and updated Changes appropriately.
    - Throttle the commit info loading.
    - Update bootstrapping for local::lib 1.006000.
    - Fixed author_* barewords in Makefile.PL.
    - Handle merges in the diff view.

0.001008 2010-06-03
   - Add a requires_external_bin for the git command so we won't try running
     tests unless it's present.
   - Remove MooseX::MultiMethods as it has been broken by a recent Moose
     change. The new code is smaller and will be faster.
   - Add diagnostics to the tests to print out the version of git that
     people are using.
   - Make tests which commonly fail with older/different versions of git
     fail with the output of their git command to make debugging the tests
     from automated reports possible.

0.001007 2010-05-15
    - Set the use_request_uri_for_path configuration variable to be compatible
      with Catalyst 5.80024.

0.001006 2010-05-13
    - Fix Catalyst::Action::REST dependency (there wasn't one previously)
    - Depend on latest Catalyst::View::TT due to a previous bad version
      breaking things.
    - Add render_die => 1 in the View::TT config as we do want real exceptions
      when we call ->render ourselves.

0.001005 2010-05-11
    - Depend on latest MX::Declare to fix issues for people who upgrade
      MooseX::Types::Structured to a newer version.
    - Add some padding below, so file icons are not chopped off
    - Updated favicon to cope with dark grey backgrounds

0.001004 2010-05-06
    - Remove unneeded dependencies:
      - XML::OPML::SimpleGen
      - XML::Atom
      - XML::RSS
    - Fixed author_* barewords in Makefile.PL so that users checking out from
      git without the author modules works correctly.

0.001003 2010-04-21
    - Added folder / file icons in tree view (Foxtons)
    - Added favicon