@@ -53,17 +53,20 @@ BOOTSTRAPPING
     path with CPAN they are installed under the Gitalist directory.
 
     To do this clone Gitalist from the Shadowcat repository mentioned above
-    or grab a download from CPAN or broquaint's github repository:
+    or grab a snapshot from broquaint's github repository:
 
         http://github.com/broquaint/Gitalist/downloads
 
     With the source acquired and unpacked run the following from within the
     Gitalist directory:
 
-        perl script/bootstrap
+        perl script/bootstrap.pl
 
     This will install the necessary modules for the build process which in
     turn installs the prerequisites locally.
+
+    *NB* The relevant bootstrap scripts aren't available in the CPAN dist as
+    the bootstrap scripts should not be installed.
 
 INITIAL CONFIGURATION
     Gitalist is configured using Catalyst::Plugin::Configloader. The
